--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,15 +1,15 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
-python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-dotenv==1.0.0
-pydantic==2.5.0
-alembic==1.12.1
-pytest==7.4.3
-httpx==0.25.2
-requests==2.31.0
-googlemaps==4.10.0
+fastapi>=0.110.0
+uvicorn[standard]>=0.27.0
+sqlalchemy>=2.0.25
+psycopg2-binary>=2.9.9
+python-multipart>=0.0.7
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+python-dotenv>=1.0.0
+pydantic>=2.6.0
+alembic>=1.13.0
+pytest>=8.0.0
+httpx>=0.26.0
+requests>=2.31.0
+googlemaps>=4.10.0
 pillow>=10.2.0
