--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -6,7 +6,8 @@ python-multipart>=0.0.7
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 python-dotenv>=1.0.0
-pydantic>=2.6.0
+pydantic[email]>=2.6.0
+email-validator>=2.0.0
 alembic>=1.13.0
 pytest>=8.0.0
 httpx>=0.26.0
