--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,7 +26,7 @@
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
     "react-organizational-chart": "^2.2.1",
-    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
@@ -37,7 +37,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "install-legacy": "npm install --legacy-peer-deps",
+    "build-production": "npm install --legacy-peer-deps && npm run build"
   },
   "eslintConfig": {
     "extends": [
