--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,7 +26,7 @@
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
     "react-organizational-chart": "^2.2.1",
-    "react-qr-scanner": "^1.0.0-alpha.11",
+    "@zxing/library": "^0.20.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
