fix: Agregar .env.production con HTTPS para Railway - Solucionar Mixed Content Error

--- a/Frontend/.env.production
+++ b/Frontend/.env.production
@@ -1,3 +1,4 @@
 "GENERATE_SOURCEMAP=false"  
 "ESLINT_NO_DEV_ERRORS=true"  
 "TSC_COMPILE_ON_ERROR=true" 
+"REACT_APP_API_URL=https://red-ciudadana-production.up.railway.app" 
