--- a/Backend/railway.toml
+++ b/Backend/railway.toml
@@ -1,10 +1,9 @@
-[build]
-builder = "nixpacks"
-
-[deploy]
-startCommand = "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
-
-[environments.production]
-variables = {}
+[build] 
+builder = "nixpacks" 
+ 
+[deploy] 
+startCommand = "uvicorn app.main:app --host 0.0.0.0 --port $PORT" 
+healthcheckPath = "/health" 
+ 
+[deploy.env] 
+PYTHONPATH = "." 
