--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -4,5 +4,12 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "env": {
+    "REACT_APP_API_URL": "https://red-ciudadana-production.up.railway.app",
+    "REACT_APP_ENVIRONMENT": "production",
+    "REACT_APP_BACKEND_URL": "https://red-ciudadana-production.up.railway.app"
+  },
+  "buildCommand": "npm run build-production",
+  "outputDirectory": "build"
 }
