--- a/Backend/railway.toml
+++ b/Backend/railway.toml
@@ -2,7 +2,7 @@
 builder = "nixpacks" 
  
 [deploy] 
-startCommand = "uvicorn app.main_minimal:app --host 0.0.0.0 --port $PORT" 
+startCommand = "uvicorn app.main:app --host 0.0.0.0 --port $PORT" 
 healthcheckPath = "/health" 
  
 [deploy.env] 
