Fix: Configurar Vercel para redirigir peticiones /api/* al backend

--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/api/(.*)",
+      "destination": "https://red-ciudadana-production.up.railway.app/api/$1"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
